--- a/src/game/gui/welcome_screen.fxml
+++ b/src/game/gui/welcome_screen.fxml
@@ -1,90 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
-<GridPane fx:id="pane_WelcomeScreen" alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity"
-          prefHeight="600.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea"
-          xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.WelcomeController">
+
+<GridPane fx:id="pane_WelcomeScreen" alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.WelcomeController">
     <columnConstraints>
-        <ColumnConstraints/>
-        <ColumnConstraints/>
-        <ColumnConstraints/>
-        <ColumnConstraints/>
-        <ColumnConstraints/>
-        <ColumnConstraints/>
-        <ColumnConstraints/>
+        <ColumnConstraints />
+        <ColumnConstraints />
+        <ColumnConstraints />
+        <ColumnConstraints />
+        <ColumnConstraints />
+        <ColumnConstraints />
+        <ColumnConstraints />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
     </rowConstraints>
     <children>
-        <Label prefHeight="80.0" prefWidth="455.0" text="Welcome to the Dice Game!" GridPane.columnIndex="1"
-               GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
+        <Label prefHeight="53.0" prefWidth="441.0" text="Welcome to the Dice Game!" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
             <font>
-                <Font size="27.0"/>
+                <Font size="27.0" />
             </font>
         </Label>
-        <Label text="Just enter a few details and then the game can start!" GridPane.columnIndex="1"
-               GridPane.rowIndex="6"/>
+        <Label fx:id="lbl_Info" minHeight="-Infinity" prefHeight="50.0" prefWidth="501.0" text="Just enter a few details and then the game can start!" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="6" />
         <GridPane prefHeight="371.0" prefWidth="450.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints/>
-                <RowConstraints/>
-                <RowConstraints/>
-                <RowConstraints/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints />
+                <RowConstraints />
+                <RowConstraints />
+                <RowConstraints />
             </rowConstraints>
             <children>
-                <Label text="Player 1" GridPane.columnIndex="1"/>
-                <TextField fx:id="txt_Player1Name" promptText="Enter a Name for Player 1" GridPane.columnIndex="2"/>
-                <Label text="Player 2" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                <TextField fx:id="txt_Player2Name" promptText="Enter a Name for Player 2" GridPane.columnIndex="2"
-                           GridPane.rowIndex="1"/>
-                <Button fx:id="btn_ReturnMenu" mnemonicParsing="false" onAction="#loadMenu" text="Back"
-                        GridPane.rowIndex="6">
+                <Label text="Player 1" GridPane.columnIndex="1" />
+                <TextField fx:id="txt_Player1Name" promptText="Enter a Name for Player 1" GridPane.columnIndex="2" />
+                <Label text="Player 2" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <TextField fx:id="txt_Player2Name" promptText="Enter a Name for Player 2" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                <Button fx:id="btn_ReturnMenu" mnemonicParsing="false" onAction="#loadMenu" text="Back" GridPane.rowIndex="6">
                     <font>
-                        <Font size="20.0"/>
+                        <Font size="20.0" />
                     </font>
                 </Button>
-                <Button fx:id="btn_StartGame" mnemonicParsing="false" onAction="#loadGame" text="Start"
-                        GridPane.columnIndex="2" GridPane.rowIndex="6">
+                <Button fx:id="btn_StartGame" mnemonicParsing="false" onAction="#loadGame" text="Start" GridPane.columnIndex="2" GridPane.rowIndex="6">
                     <font>
-                        <Font size="20.0"/>
+                        <Font size="20.0" />
                     </font>
                 </Button>
-                <Label text="Max Score" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-                <TextField fx:id="txt_MaxScore" promptText="Enter the Score to Win" text="30" GridPane.columnIndex="2"
-                           GridPane.rowIndex="2"/>
-                <Button fx:id="btn_LoadHelp" mnemonicParsing="false" onAction="#loadHelp" text="Help"
-                        GridPane.columnIndex="1" GridPane.rowIndex="6">
+                <Label text="Max Score" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <TextField fx:id="txt_MaxScore" promptText="Enter the Score to Win" text="30" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                <Button fx:id="btn_LoadHelp" mnemonicParsing="false" onAction="#loadHelp" text="Help" GridPane.columnIndex="1" GridPane.rowIndex="6">
                     <font>
-                        <Font size="20.0"/>
+                        <Font size="20.0" />
                     </font>
                 </Button>
             </children>
